# dotfiles

./: .bash_profile  .bashrc  .env.example  .gitattributes  .gitconfig  .gitconfig-personal  .gitconfig-professional  .gitconfig.windows  .gitignore  .gitmodules  .hushlogin  .inputrc  .profile  .secrets.baseline  .secrets.example  .zshenv  .zshrc  .zshrc-msys2-bootstrap  AGENTS.md  Brewfile  CHANGELOG.md  CLAUDE.md  Justfile  Makefile  README.md  claude-link-setup  claude-mcp-setup  claude-plugins-setup  copilot-link-setup  false  git-ssh-setup  install  install-wsl  install.conf.yaml  install.ps1  install.ubuntu.vm.sh  install.wsl.yaml  plugin-functions.sh  pyproject.toml  ralph  (+6 more)
claude/commands/yt/: api_config.py  check_job.py  fetch_metadata.py  fetch_transcript.py  find_content.py  get_content.py  ingest_video.py  job_utils.py  list_videos.py  post_annotation.py  pyproject.toml  reprocess.py  search.py  test_search.py
opencode/commands/yt/: check_job.py  fetch_metadata.py  fetch_transcript.py  pyproject.toml  signing.py
pi/prompt-routing/: AGENTS.md  active_learning_eval.py  active_learning_queue.py  active_learning_retrain_eval.py  analytics.md  audit.py  baseline_rebuild_parity.py  build_corpus.py  classifier.py  classifier_confgate.py  classifier_ensemble.py  classifier_lgbm.py  classify.py  curation_experiment.py  curation_pipeline.py  data.py  design-report.md  eval-report.md  eval_baseline_snapshot.json  eval_postrollback_snapshot.json  eval_runA_snapshot.json  eval_runB_snapshot.json  eval_runC_snapshot.json  eval_runD_snapshot.json  eval_runE_lgbm_snapshot.json  evaluate.py  ingest_data_files.py  label_history.py  merge_labels.py  model.pkl.baseline.bak  model.pkl.sha256  privacy.py  pyproject.toml  requirements.txt  router.py  router_analytics.py  safety_floor.py  train.py  train_lgbm.py
pi/prompt-routing/data/: adjudication_apply_report.json  adjudication_decisions.jsonl  adjudication_queue.jsonl  adjudication_summary.json  annotation_queue.csv  coding_prompts_by_tier.json  coding_prompts_high.json  coding_prompts_medium.json  coding_prompts_small.json  context_sequences_v1.jsonl  curated_history_route_labels.jsonl  dev_v3.jsonl  eval_v3.jsonl  gpt-5.4_prompts.json  grok-4.2_prompts.json  migration_candidates.csv  migration_exclusions.csv  ood_eval.json  realpi_extraction_queue.jsonl  relabeled_mid_tier_route_labels.jsonl  seed_route_labels.jsonl  synthetic-generation-matrix.yaml  synthetic_prompt_families.jsonl  synthetic_provenance.jsonl  synthetic_route_labels.jsonl  synthetic_route_labels.pre_wave4.jsonl  train_v3.jsonl  training_corpus.json  training_corpus_v3.example.json
pi/prompt-routing/docs/: classifier-experiment-pipeline.md  classifier-experiments.md  classifier-training.md  confgate-sweep.json  confgate-sweep.md  corpus-audit.md  corpus-readiness-report.md  corpus-v3-schema.md  cost-shadow-eval-confgate.json  cost-shadow-eval-confgate.md  cost-shadow-eval.json  cost-shadow-eval.md  curation-experiment-status.md  curation-next-steps.md  curation-pipeline.md  effort-routing-closeout.md  eval-v3-baseline.json  eval-v3-metrics.md  nvidia-complexity-scorer.md  operator-handoff.md  router-v3-eval-confgate.json  router-v3-eval-ensemble.json  router-v3-eval-lgbm.json  router-v3-eval.json  router-v3-metrics.md  router-v3-output-contract.md  router-v3-output.schema.json  router-v3-target.md  seed-labeling-summary.md  setThinkingLevel-probe.md  settings-doc.md  synthetic-generation-plan.md  synthetic-runbook.md  uncertain-threshold-sweep.json  uncertain-threshold-sweep.md  user-effort-override-policy.md  wave4-generation-report.md
pi/prompt-routing/experiments/: exp_alternative_classifiers.py  exp_results.json
pi/prompt-routing/models/: router_v3.joblib  router_v3.joblib.runA.bak  router_v3.sha256  router_v3_lgbm.sha256
pi/prompt-routing/prompts/: adjudicator_template_v1.txt  external_generator_prompt.md  synthetic_batch.md  (+1 more)
pi/tool-reduction/: build_index.py  corpus.py  evaluate.py  guards.py  pipeline.py  pyproject.toml  reduce.py  regex_guard.py  requirements.txt  rules.py  scrub.py  shell_argv.py
(+2491 files in other folders)
