[project]
name = "dotfiles-tests"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pytest",
    "pyyaml",
    "ruff",
    "tree-sitter>=0.23.0",
    "tree-sitter-bash>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["dotbot/", "menos/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["test", "claude/hooks/*/tests"]
