[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles-tests"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "pyyaml",
    "ruff",
    "tree-sitter>=0.23.0",
    "tree-sitter-bash>=0.23.0",
]

[project.scripts]
x-research = "x_research.cli:main"

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["dotbot/", "onclave/", ".venv/", "pi/prompt-routing/data/synthetic_shards/", "pi/prompt-routing/tools/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["test", "claude/hooks/*/tests"]
