[project]
name = "pi-prompt-routing"
version = "0.1.0"
description = "Local prompt routing classifier for Pi"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4,<2.0",
  "lightgbm>=4.0,<5.0",
  "numpy>=2.0,<3.0",
  "scikit-learn==1.8.0",
  "sentence-transformers>=5.0,<6.0",
]

[tool.uv]
package = false
