[project]
name = "pi-prompt-routing"
version = "0.1.0"
description = "Local prompt routing classifier for Pi"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.101.0",
  "duckdb>=1.1,<2.0",
  "joblib>=1.4,<2.0",
  "lightgbm>=4.0,<5.0",
  "numpy>=2.0,<3.0",
  "scikit-learn==1.8.0",
  "sentence-transformers>=5.0,<6.0",
]

[tool.uv]
package = false
exclude-newer = "3 days"
index-strategy = "first-index"
no-sources = true
no-build = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
