[project]
name = "youtube-transcript"
version = "2.0.0"
description = "YouTube transcript and metadata fetcher with proxy support"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.3",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
fetch-transcript = "fetch_transcript:main"
fetch-metadata = "fetch_metadata:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
