[project]
name = "youtube-transcript"
version = "3.0.0"
description = "YouTube transcript fetcher with menos API integration"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.3",
    "google-api-python-client>=2.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.scripts]
fetch-transcript = "fetch_transcript:main"
fetch-metadata = "fetch_metadata:main"
ingest-video = "ingest_video:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
